# streamlit_tests

similarity_test/: requirements.txt  run.py
url_test/: pyproject.toml  requirements.txt  run.py
